[gd_scene load_steps=3 format=3 uid="uid://cocnfaycv1vn7"]

[ext_resource type="Script" uid="uid://cn0bh54b26t62" path="res://game_board.gd" id="1_i37i2"]
[ext_resource type="LabelSettings" uid="uid://bwshwddtgehyr" path="res://ui_style.tres" id="2_i37i2"]

[node name="GameBoard" type="CanvasLayer"]
script = ExtResource("1_i37i2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WinText" type="Label" parent="CanvasLayer"]
visible = false
z_index = 3
z_as_relative = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -137.0
offset_top = 180.0
offset_right = 117.0
offset_bottom = 263.0
grow_horizontal = 2
text = "You Win!"
label_settings = ExtResource("2_i37i2")
horizontal_alignment = 1

[node name="TimerText" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 29.0
offset_top = -2.0
offset_right = 148.0
offset_bottom = 81.0
text = "0:00"
label_settings = ExtResource("2_i37i2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 853.0
offset_top = -2.0
offset_right = 1079.0
offset_bottom = 81.0
text = "Score:"
label_settings = ExtResource("2_i37i2")

[node name="ScoreValue" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 1046.0
offset_top = -2.0
offset_right = 1149.0
offset_bottom = 81.0
text = "000"
label_settings = ExtResource("2_i37i2")
